@@ -77,20 +77,10 @@ cd ../glibc-build</userinput></screen>
     --prefix=/usr                \
     --disable-profile            \
     --enable-kernel=&min-kernel;       \
-    --libexecdir=/usr/lib/glibc  \
     --enable-obsolete-rpc</userinput></screen>
 
     <variablelist>
       <title>The meaning of the new configure options:</title>
-
-      <varlistentry>
-        <term><parameter>--libexecdir=/usr/lib/glibc</parameter></term>
-        <listitem>
-          <para>This changes the location of some auxillary files from the
-          default of <filename class="directory">/usr/libexec</filename> to
-          <filename class="directory">/usr/lib/glibc</filename>.</para>
-        </listitem>
-      </varlistentry>
 
       <varlistentry>
         <term><parameter>--enable-obsolete-rpc</parameter></term>
@@ -156,8 +146,14 @@ grep Error glibc-check-log</userinput></screen>
       </listitem>
 
       <listitem>
+        <para>libio/tst-ftell-partial-wide.out fails because it needs a locale
+        that has not yet been generated.</para>
+      </listitem>
+
+      <listitem>
         <para>Other tests known to fail on some architectures are posix/bug-regex32,
-        misc/tst-writev, elf/check-textrel, nptl/tst-getpid2, and stdio-common/bug22.</para>
+        misc/tst-writev, elf/check-textrel, nptl/tst-getpid2, nptl/tst-robust8,
+        and stdio-common/bug22.</para>
       </listitem>
 
     </itemizedlist>
