@@ -44,7 +44,6 @@
     <para>Prepare Man-DB for compilation:</para>
 
 <screen><userinput remap="configure">./configure --prefix=/usr                        \
-            --libexecdir=/usr/lib                \
             --docdir=/usr/share/doc/man-db-&man-db-version; \
             --sysconfdir=/etc                    \
             --disable-setuid                     \
