@@ -5,7 +5,7 @@
 
 SHELL=/bin/bash
 SYSTEMD_VERSION=208
-VERSION=$(SYSTEMD_VERSION)-1
+VERSION=$(SYSTEMD_VERSION)-3
 
 ifeq ($(V),)
  VB = @
@@ -21,7 +21,7 @@ WARN = -Wall -W -Wextra -Wno-inline -Wvla -Wundef -Wformat=2 \
 -Wmissing-noreturn -Wshadow -Wendif-labels -Wcast-align \
 -Wstrict-aliasing=2 -Wwrite-strings -Wno-overlength-strings \
 -Wno-unused-parameter -Wno-missing-field-initializers -Wno-unused-result \
--Werror=overflow -Wp,-D_FORTIFY_SOURCE=2 -Wno-long-long 
+-Werror=overflow -Wp,-D_FORTIFY_SOURCE=2 -Wno-long-long -Wno-vla
 
 OPTIONS = -O2 -pipe -ffast-math -fno-common -fdiagnostics-show-option \
 -fno-strict-aliasing -ffunction-sections -fdata-sections -fPIC -std=gnu99
@@ -29,7 +29,7 @@ OPTIONS = -O2 -pipe -ffast-math -fno-common -fdiagnostics-show-option \
 OPTIONS2 := $(OPTIONS) -fvisibility=hidden
 
 LDFLAGS1  = -pthread -lrt -Wl,--as-needed -Wl,--gc-sections -Wl,--no-undefined 
-LDFLAGS2 := $(LDFLAGS1) -lblkid -lkmod 
+LDFLAGS2 := $(LDFLAGS1) -L /tools/lib -lblkid -lkmod 
 
 DEF = -include cfg.h                    \
       -DSYSCONFDIR=\"/etc\"             \
@@ -42,7 +42,7 @@ DEF = -include cfg.h                    \
       -DHAVE_FIRMWARE
 
 INCLUDE = -I src/libudev -I src/shared -I src -I src/login -I src/systemd \
-          -I src/core    -I udev-lfs-$(SYSTEMD_VERSION)-1
+          -I src/core    -I udev-lfs-$(VERSION)
 
 LIBUDEV_SRCS = libudev-device-private.c \
                libudev-device.c         \
@@ -152,7 +152,6 @@ VPATH = src/login          src/udev          src/udev/accelerometer \
 SED_PROCESS = \
   sed  -e 's|@VERSION@|$(SYSTEMD_VERSION)|g'       \
        -e 's|@prefix@|/usr|g'              \
-       -e 's|@exec_prefix@|/usr|g'         \
        -e 's|@udevlibexecdir@|/lib/udev|g' \
        -e 's|@libdir@|/usr/lib|g'          \
        -e 's|@includedir@|/usr/include|g'  \
