@@ -1,3 +1,7 @@
+2014-02-16  <bdubbs@linuxfromscratch.org>
+   * Makefile.lfs: Adjust warning flags.  Adjust linking rules to
+     allow build with util-linux in LFS's /tools directory.
+
 2010-01-26	Matt Burgess <matthew@linuxfromscratch.org>
 	* 55-lfs.rules: Remove lots of rules that have been merged upstream.
 	* 61-cdrom.rules: Remove as upstream has a replacement.
